Added 'focusOnRender' option which allows, when set to false, to disable the auto-capturing of focus

--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@ Diners Club: 38111111111119
 
         if(isBrowserCompatible){
           window.card = new Skeuocard($("#skeuocard"), {
-            debug: false
+            debug: false,
+            focusOnRender: false
           });
         }
       });
